--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body style="background-color: #669160">
 <!-- 	<div id="loading">
 	</div> -->
-	<div class="container"style="padding-left: 3rem;">
+	<div class="container"style="padding-left: 3rem;width: 100%;">
 		<div id="wrapper" >
 			<!-- Sidebar -->
 			<div id="sidebar-wrapper">
@@ -80,13 +80,6 @@
 							style="margin-left:10px;" >下載</span> 
 						</label>
 					</li>
-					<li>
-						<label class="my-3">
-							<input type="button" class="sr-only" id='button4'>
-							<i class="fa fa-info-circle fa-lg" aria-hidden="true"></i> 
-							<span style="margin-left:10px;">單元測試</span>
-						</label>
-					</li>
 				</ul>
 			</div>
 		</div>
@@ -107,6 +100,10 @@
 				</div>
 			</div>
 		</div>
+		<div style="padding-left: 20vw;padding-top:5vh;">
+			<span>筆劃調整</span>
+			<input  type="range" min="1" max="10" value="5" id='pan_size'>
+		</div>
 	</div>
 </body>
 <script>
@@ -118,13 +115,10 @@
 	});
 	var tooltip=document.getElementById('tool_list');
 	var clear=document.getElementById('button1');
-	// $("#button4").on('click',function() {
-	// 	location.href='unitTest.html';
-	// });
+	var pansize=document.getElementById('pan_size');
 </script>
 <script type="text/javascript" src="js/canvas_pixel.js"></script>
-<!-- <script async src="js/opencv.js" onload="onOpenCvReady();" type="text/javascript"></script> -->
-<!-- <script src="js/vc-draw.js"></script> -->
+
 <script type="text/javascript" src="js/downloadbutton.js"></script>
 
 </html>
