--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body style="background-color: #669160">
 <!-- 	<div id="loading">
 	</div> -->
-	<div class="container"style="padding-left: 3rem;width: 100%;">
+	<div class="container"style="padding-left: 3rem;width: 100%; height: 100vh">
 		<div id="wrapper" >
 			<!-- Sidebar -->
 			<div id="sidebar-wrapper">
@@ -80,6 +80,11 @@
 							style="margin-left:10px;" >下載</span> 
 						</label>
 					</li>
+					<li>
+						<label class="my-3"> <input type="button" class="sr-only" id='downloadbutton'><i class="fab fa-accessible-icon fa-lg"></i><span
+							style="margin-left:10px;" >換張圖片</span> 
+						</label>
+					</li>
 				</ul>
 			</div>
 		</div>
@@ -89,22 +94,27 @@
 					aria-controls="nav-home" aria-selected="true">圖片繪製</a>
 			</div>
 		</nav>
-		<div class="tab-content" style="background-color: #ffffff" id="nav-tabContent">
+		<div class="tab-content" style="background-color: #ffffff ;" id="nav-tabContent">
 			<!--高寬要弄class-->
-			<div style="width: 100%">
-				<div class="row justify-content-center align-items-center" style="width: 100%;">
-					<div class="tab-pane fade show active col" id="nav-home" role="tabpanel" style="width: 100%;"aria-labelledby="nav-home-tab"><canvas id="imageSrc" style="height: 256px;width: 256px;margin:auto;display: block;"></canvas>
+			<div style="width: 100%;height: 60vh;">
+				<div class="row justify-content-center align-items-center" style="width: 100%;height:100%;">
+					<div class="tab-pane fade show active col" id="nav-home" role="tabpanel" style="align-items: center;display: flex;width: 100%;height:100%;"aria-labelledby="nav-home-tab"><canvas id="imageSrc" style="margin:auto;height: 256px;width: 256px;"></canvas>
 					</div>
-					<div class="col" id="nav-home_2" role="tabpanel" style="width: 100%;"aria-labelledby="nav-home-tab_2"><img id="real_img_1" style="height: 256px;width: 256px;margin:auto;display: block;" src="./img/gura.png">
+					<div class="col" id="nav-home_2" role="tabpanel" style="width: 100%;height:100%;display: flex;align-items: center;"aria-labelledby="nav-home-tab_2">	<img id="real_img_1" style="margin:auto;height: 256px;width: 256px;" src="./img/gura.png">
 					</div>
 				</div>
 			</div>
 		</div>
-		<div style="padding-left: 20vw;padding-top:5vh;">
-			<span>筆劃調整</span>
-			<input  type="range" min="1" max="10" value="5" id='pan_size'>
-		</div>
 	</div>
+	<footer style="width:100%;position: fixed;bottom: 0;">
+		<!-- <div style="position: fixed;"> -->
+		<div style="display: flex;">
+			<div style="margin:auto;">
+					<span>筆劃調整</span>
+					<input s type="range" min="1" max="10" value="5" id='pan_size'>					
+			</div>
+		</div>
+	</footer>
 </body>
 <script>
 	$("#menu-toggle").click(function (e) {
